--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,7 @@ h2 {
   padding-top: 16px;
   border-top: 1px solid lightgray;
 }
+
 .no-todos-container {
   width: 300px;
   margin: 30px auto;
@@ -145,4 +146,12 @@ h2 {
 .no-todos-container p {
   margin-top: 20px;
   text-align: center;
+}
+
+.name-container {
+  margin-bottom: 40px;
+}
+
+.name-label {
+  margin-top: 15px;
 }
